--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <button onclick="processString()">Развернуть строку используя C++</button>
         <script src="reverse.js"></script>
-        <script src="script.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
